# platform_PROforALL

./: .env.sample  pyproject.toml
config/: celery.py  settings.py  urls.py
main_app/: admin.py  models.py  paginations.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  validations.py  views.py
main_app/management/commands/: fill.py
main_app/migrations/: 0001_initial.py  0002_lesson_course.py  0003_course_amount_course_user_lesson_user_and_more.py
main_app/tests/: lessons_tests.py  main_app_tests.py  services.py  subscription_tests.py  tests_of_lessons.py  tests_of_main_app.py  tests_of_subscription.py
payment/: admin.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
payment/management/commands/: check_payments.py
payment/migrations/: 0001_initial.py  0002_alter_payment_options_remove_payment_paid_lesson_and_more.py
users/: models.py  serializers.py  urls.py  views.py
users/management/command/: csu.py
users/migrations/: 0001_initial.py
